css/styles.css
/* ... */
#portfolio .container-fluid .portfolio-box:hover .portfolio-box-caption, #portfolio .container-sm .portfolio-box:hover .portfolio-box-caption, #portfolio .container-md .portfolio-box:hover .portfolio-box-caption, #portfolio .container-lg .portfolio-box:hover .portfolio-box-caption, #portfolio .container-xl .portfolio-box:hover .portfolio-box-caption, #portfolio .container-xxl .portfolio-box:hover .portfolio-box-caption {
  opacity: 1;
}
*{
direction: rtl;  
}


#linkus{
 position: fixed;
 top:50%;
 left:0;
}

.non-underline{
  text-decoration: none;
}
.og{
  background-color: #cf5331;
 
}


.topnav {
  overflow: hidden;
  background-color: #000000;
  direction: rtl;
}

.topnav a {
  float: left;
  display: block;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
  font-family: courier new;
  font-weight: bold;
}
 *{
  font-family: 'Amiri', serif !important;
  margin: 0;
  padding: 0;

 }
.topnav a:hover {
  background-color: #ff5959;
  color: black;
}

.topnav a.active {
  background-color: #ff0000;
  color: white;
}

.topnav .icon {
  display: none;
}

@media screen and (max-width: 600px) {
  .topnav a:not(:first-child) {display: none;}
  .topnav a.icon {
    float: right;
    display: block;
  }
}

@media screen and (max-width: 600px) {
  .topnav.responsive {position: relative;}
  .topnav.responsive .icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  .topnav.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
}

.right-lnk {
   float: right;
}

